--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -3,72 +3,108 @@
 \chapter{Meetings}
 The following tables are showing the protocolls of the held team meetings.
 
+
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_6}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_05.png}
+  \caption{meeting protocol no. 5}
+  \label{fig:meeting protocol no. 5}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_06.png}
   \caption{meeting protocol no. 6}
   \label{fig:meeting protocol no. 6}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_8}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_07.png}
+  \caption{meeting protocol no. 7}
+  \label{fig:meeting protocol no. 7}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_08.png}
   \caption{meeting protocol no. 8}
   \label{fig:meeting protocol no. 8}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_10}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_09.png}
+  \caption{meeting protocol no. 9}
+  \label{fig:meeting protocol no. 9}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_10.png}
   \caption{meeting protocol no. 10}
   \label{fig:meeting protocol no. 10}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_11}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_11.png}
   \caption{meeting protocol no. 11}
   \label{fig:meeting protocol no. 11}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_12}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_12.png}
   \caption{meeting protocol no. 12}
   \label{fig:meeting protocol no. 12}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_13}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_13.png}
   \caption{meeting protocol no. 13}
   \label{fig:meeting protocol no. 13}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_15}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_14.png}
+  \caption{meeting protocol no. 14}
+  \label{fig:meeting protocol no. 14}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_15.png}
   \caption{meeting protocol no. 15}
   \label{fig:meeting protocol no. 15}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_17}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_16.png}
+  \caption{meeting protocol no. 16}
+  \label{fig:meeting protocol no. 16}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_17.png}
   \caption{meeting protocol no. 17}
   \label{fig:meeting protocol no. 17}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_18}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_18.png}
   \caption{meeting protocol no. 18}
   \label{fig:meeting protocol no. 18}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-    \includegraphics[width=\textwidth]{images/a_meetings/meeting_19}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_19.png}
   \caption{meeting protocol no. 19}
   \label{fig:meeting protocol no. 19}
 \end{figure}
