--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -177,4 +177,21 @@
    note = "[Online; accessed 22-March-2012]"
  }  
 
+@article{PAN:2007, 
+Journal = {ACM SIGIR Workshop Report}, 
+Year = {2007}, 
+Title = {Plagiarism Analysis, Authorship Identification, and Near-Duplicate Detection}, 
+Pages = {68-70}, 
+Author = {Benno Stein, Moshe Koppel, Efstathios Stamatatos}, 
+Volume = {1} 
+}
+@article{PI:2001, 
+Journal = {VINE}, 
+Year = {2001}, 
+Title = {Plagiarism issues for higher education}, 
+Pages = {36-41}, 
+Author = {Fintan Culwin, Thomas Lancaster}, 
+Volume = {1} 
+}
+
  
