--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -172,10 +172,9 @@ During the last ten years a lot of software companies came into market to automa
 There are two different approaches for plagiarism detection systems to identify plagiarism in text documents:
 \begin{enumerate}
 \item \textbf{Corpus based analysis}\\
-means to "compare suspicious documents against a set of potential original documents" PAN'07
-to find similar text passages.
+means to "compare suspicious documents against a set of potential original documents" \citet{PAN:2007} to find similar text passages.
 \item \textbf{Intrinsic analysis}\\
-"identifies potentially plagiarized passages by analyzing the suspicious document with respekt to changes in writing style". PAN'07
+"identifies potentially plagiarized passages by analyzing the suspicious document with respekt to changes in writing style". \citep{PAN:2007}
 \end{enumerate}
 These computer assisted detection systems alone are not appropriate to find all plagiarisms without human judgement.  
 
@@ -188,9 +187,9 @@ These computer assisted detection systems alone are not appropriate to find all 
   \label{fig:4-stage plagiarism detection process}
 \end{figure}
 
-We found out that the most practical way is to combine both approaches - the first step is to use the computer-based detection to find similarities between the suspicious documents and the original papers. The second step is to examine the results, validate them and continue the search in a deeper level. (see figure 4 stage)
+We found out that the most practical way is to combine both approaches - the first step is to use the computer-based detection to find similarities between the suspicious documents and the original papers. The second step is to examine the results, validate them and continue the search in a deeper level.\citep{PI:2001} (see figure \ref{fig:4-stage plagiarism detection process}) 
 
-(Culwin, Fintan; Lancaster, Thomas (2001), "Plagiarism issues for higher education", Vine 31 (2): 36-41, doi:10.1108/03055720010804005)
+
 
 \section{Commercial software systems} 
 
@@ -317,7 +316,7 @@ In the past the had a lot of problems to deal with umlauts, and having a complex
   \label{fig:Turnitin overview}
 \end{figure}
  
-In 2008 the system was placed at the 13th position. The reason of this change is that the others systems have gotten worse. Turnitin has still problems of flagging spam sites especially when this sites are not safe for work (e.g. site with pornography content) (figure porn). This is a problem when students uses school or university computers.
+In 2008 the system was placed at the 13th position. The reason of this change is that the others systems have gotten worse. Turnitin has still problems of flagging spam sites especially when this sites are not safe for work (e.g. site with pornography content) (see \ref{fig:TurnitinSpamExample}). This is a problem when students uses school or university computers.
 On the other hand the search algorithm of Turnitin is storing sites in their database although they are still not exist.\citep{TurnitinTest}
 
 
@@ -330,7 +329,7 @@ There are different license models for the education sector and the cost depends
     \includegraphics[width=0.97\textwidth]{images/software_systems/turnitin_4.png}
   }
   \caption{Turnitin - A lot of spam-sites are reported. Not all sufficient to use at work. This is one of the harmless examples.}
-  \label{fig:Turnitin overview}
+  \label{fig:TurnitinSpamExample}
 \end{figure}
 
 
