update time logging tables

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -124,3 +124,17 @@
    url = "http://www.plagiarism.org/plag_article_what_is_plagiarism.html",
    note = "[Online; accessed 27-March-2012]"
  }
+
+@article{one12,
+  author = {Weber-Wulff, Debora and Wohnsdorf, Gabriele},
+  biburl = {http://www.bibsonomy.org/bibtex/2bb0c353b56f697276cc33155c62bb41e/drain},
+  journal = {Information - Wissenschaft \& Praxis},
+  number = 2,
+  pages = {90-98},
+  title = {Strategien der Plagiatsbekämpfung},
+  url = {https://komm-in.uni-hohenheim.de/fileadmin/einrichtungen/agrar/Studium/Plagiate/strategien_plagiate.pdf},
+  volume = 57,
+  year = 2006
+} 
+ 
+ 
