--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -1,7 +1,7 @@
 \begin{appendix}
 
 \chapter{Meetings}\label{ch:Meetings}
-The following tables are showing the protocolls of the held team meetings.
+The following tables show the minutes of most of the team meetings.
 
 \begin{figure}[htbp]
   \centering
@@ -73,9 +73,7 @@ The following tables are showing the protocolls of the held team meetings.
   \label{fig:meeting protocol no. 19}
 \end{figure}
 
-
-
-\chapter{Logged Time As Of March 11, 2012}
+\chapter{Logged Time As Of March 22, 2012}
 
 The following tables are some example reports generated from the logged time in Redmine. To find the most recent version
 of these reports or to generate custom data analysis you can use the \enquote{Report} tool found in Redmine on the \enquote{Overview}
