--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -135,16 +135,16 @@ Based on \citet{Wiredprof2010}, there are 3 forms of citation:
 
 \begin{description}
 \item[Direct quotation:] \hfill \\
-That is an exact word-to-word copy from one source. In this case, in order to cite you have to mark 
-the text with quotation marks and indicate a  parenthetical referencing, which includes the book’s name and the page 
-number where you found the source.
+That is an exact word-to-word copy from one \textit{source}. In this case, in order to cite you have to mark 
+the text with quotation marks and indicate a  parenthetical referencing, which includes the \textit{book’s name and the page 
+number} where you found the source.
 \item[Paraphrase:] \hfill \\
 That is your own explanation of someones idea. Many people think it is not a plagiarism because the text 
 is written with your own words. But it is still a plagiarism because basically that is not your idea or your opinion, 
 but the author’s himself. In this case of citation, some keywords are still kept in the work. Therefore the 
 parenthetical reference must be given.
 \item[Summary:] \hfill \\
-That is the same as paraphrase, but this kind of citation is likely a summary of the text. In this case you 
+That is the same as paraphrase, but this kind of citation is likely a \textit{summary} of the text. In this case you 
 have to give the parenthetical referencing as well.
 \end{description}
 
@@ -161,12 +161,12 @@ citation is documented and if the reference is given properly.
 
 \subsubsection{VroniPlag’s classification of plagiarism}\label{sec:classification}
 
-According to VroniPlag there are the following plagiarism categories. 
+According to VroniPlag\citep{} there are the following plagiarism categories. 
 The categories are originally written in German, and the translation or the similar category in English is written 
 right after the german expression.
 
 \begin{description}
-\item[Komplettplagiat/Copy \& Paste:] \hfill \\
+\item[Komplettplagiat/Copy \& Paste\citep{one12}:] \hfill \\
 The name of this category already indicates how the text is plagiarized. The 
 plagiariser just copies from the source exactly word-by-word and does not leave any proper reference to the source 
 intentionally. Some is too lazy so that they just copy existing mistakes, formats etc... without checking, which 
@@ -520,13 +520,6 @@ PlagScan has four different payment-models without a contract:
 \item \textbf{69 Euro}\\
 5.000 Plagpoints - 500.000 words - 2.000 Sites. 
 \end{enumerate}
-
-
-
-
-
-
-
 
 
 
