new change in plagiarism.tex

--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -210,11 +210,11 @@ The software system compare digital content from the internet or different types
 They seek for similarities, report suspicious parts and try to answer the question if the present text is a plagiarism or not.
 
 This chapter covers parts of the results of the big "Plagiarism Detection System Test 2010". 
-The following benchmarking was done by Prof. Debora Weber-Wulff at the University of Applied Sciences HTW Berlin and her plagiarism team in 2010. 
+The following benchmarking was done by Prof. Debora Weber-Wulff at the University of Applied Sciences HTW Berlin and her plagiarism team in 2010. \citep{PlagiatTeam} 
 The entire benchmarking includes 26 of the 47 available systems on the market and gives an overview of the strengths and weaknesses of these systems in finding plagiarism.
 
 We used the top 5 "partially useful" software systems in this  benchmarking to overview the market and find the best usable features for our own system to simplify the daily work of plagiarism finders. 
-
+\citep{PlagiatTeam} 
 
 
 
