--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -6,71 +6,71 @@ The following tables show the minutes of most of the team meetings.
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_6}
-  \caption{meeting protocol no. 6}
-  \label{fig:meeting protocol no. 6}
+  \caption{Meeting minutes no. 6}
+  \label{fig:meeting minutes no. 6}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_8}
-  \caption{meeting protocol no. 8}
-  \label{fig:meeting protocol no. 8}
+  \caption{Meeting minutes no. 8}
+  \label{fig:meeting minutes no. 8}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_10}
-  \caption{meeting protocol no. 10}
-  \label{fig:meeting protocol no. 10}
+  \caption{Meeting minutes no. 10}
+  \label{fig:meeting minutes no. 10}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_11}
-  \caption{meeting protocol no. 11}
-  \label{fig:meeting protocol no. 11}
+  \caption{Meeting minutes no. 11}
+  \label{fig:meeting minutes no. 11}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_12}
-  \caption{meeting protocol no. 12}
-  \label{fig:meeting protocol no. 12}
+  \caption{Meeting minutes no. 12}
+  \label{fig:meeting minutes no. 12}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_13}
-  \caption{meeting protocol no. 13}
-  \label{fig:meeting protocol no. 13}
+  \caption{Meeting minutes no. 13}
+  \label{fig:meeting minutes no. 13}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_15}
-  \caption{meeting protocol no. 15}
-  \label{fig:meeting protocol no. 15}
+  \caption{Meeting minutes no. 15}
+  \label{fig:meeting minutes no. 15}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_17}
-  \caption{meeting protocol no. 17}
-  \label{fig:meeting protocol no. 17}
+  \caption{Meeting minutes no. 17}
+  \label{fig:Meeting minutes no. 17}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_18}
-  \caption{meeting protocol no. 18}
-  \label{fig:meeting protocol no. 18}
+  \caption{Meeting minutes no. 18}
+  \label{fig:Meeting minutes no. 18}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
     \includegraphics[width=\textwidth]{images/a_meetings/meeting_19}
-  \caption{meeting protocol no. 19}
-  \label{fig:meeting protocol no. 19}
+  \caption{Meeting minutes no. 19}
+  \label{fig:Meeting minutes no. 19}
 \end{figure}
 
 \chapter{Logged Time As Of March 22, 2012}
