Added Tiens sources

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -125,6 +125,14 @@
    note = "[Online; accessed 22-March-2012]"
  }
 
+ @misc{ PlagiarismSearch,
+   author = "PlagiarismSearch.com, {}",
+   title = "Plagiarism Types",
+   year = "2009",
+   url = "http://www.plagiarismsearch.com/blog/plagiarism-types/",
+   note = "[Online; accessed 22-March-2012]"
+ }
+ 
 @article{one12,
   author = {Weber-Wulff, Debora and Wohnsdorf, Gabriele},
   biburl = {http://www.bibsonomy.org/bibtex/2bb0c353b56f697276cc33155c62bb41e/drain},
