working progress documentation

--- a/docs/Developers Manual/biblio.bib
+++ b/docs/Developers Manual/biblio.bib
@@ -8,6 +8,15 @@
   year = {2012},
   note = {[Online; accessed 07-February-2012]}
 }
+\url{http://de.wikipedia.org/wiki/VroniPlag_Wiki
+
+@misc{Wikipedia,
+  author = {Wikipedia},
+  title = {VroniPlag Wiki},
+  howpublished = {\url{http://de.wikipedia.org/wiki/VroniPlag_Wiki},
+  year = {2012},
+  note = {[Online; accessed 23-March-2012]}
+}
 
 @BOOK{Marcotte2011,
   title = {Responsive Web Design},
