--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -1,4 +1,4 @@
-﻿\chapter{A Plagiarism Primer}\label{chap:plagOverview}
+\chapter{A Plagiarism Primer}\label{chap:plagOverview}
 
 Here we will introduce you to the topics we encountered and researched in the beginning of the Unplagged project.
 
@@ -545,10 +545,12 @@ The recommendation of  the \citet{PlagiatTeam} were that the focus should be on 
 
 
 \section{Vroni Plag}
-VroniPlag is a wiki platform which many volunteers, who are ready to give their free time, their money or 
+\textit{VroniPlag}  is a wiki platform which many volunteers, who are ready to give their free time, their money or 
 their books/resources etc. work on. They collaborate with each other in order to detect plagiarism in dissertations or
 habilitations.
 
+The wiki \textit{VroniPlag} was founded in 2011 in march the 28th. \textit{VroniPlag}  is mainly reviewing dissertations, which could be plagiats. It is an developed equivalent of the \textit{GuttenPlag} wiki. The founder of VroniPlag is Martin Heidingsfelder.
+\citep{Wikipedia}
 
 
 VroniPlag is named after the first case which they published. The case was the one of Veronica Saß.
