--- a/docs/Developers Manual/parts/preface.tex
+++ b/docs/Developers Manual/parts/preface.tex
@@ -1,4 +1,4 @@
-\chapter*{Introduction\footnote{Every plagiarism found in this handbook is intended and left for the reader as an exercise ;-)}}
+\chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 
 After Minister Guttenberg had to resign, because of the plagiarisms found in his doctoral thesis,
