--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -542,7 +542,7 @@ The recommendation of  the \citet{PlagiatTeam} were that the focus should be on 
 their books/resources etc. work on. They collaborate with each other in order to detect plagiarism in dissertations or
 habilitations.
 
-The wiki \textit{VroniPlag} was founded in 2011 in march the 28th. \textit{VroniPlag}  is mainly reviewing dissertations, which could be plagiats. It is an developed equivalent of the \textit{GuttenPlag} wiki. The founder of VroniPlag is Martin Heidingsfelder.
+The wiki \textit{VroniPlag} was founded in march the 28th 2011 . \textit{VroniPlag}  is mainly reviewing dissertations, which could be plagiats. It is a developed equivalent of the \textit{GuttenPlag} wiki. The founder of VroniPlag is Martin Heidingsfelder.
 \citep{Wikipedia}
 
 
