--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -546,7 +546,7 @@ The wiki \textit{VroniPlag} was founded in march the 28th 2011 . \textit{VroniPl
 \citep{Wikipedia}
 
 
-VroniPlag is named after the first case which they published. The case was the one of Veronica Saß.
+\textit{VroniPlag} is named after the first case which they published. The case was the one of Veronica Saß.
 
 Because it is a wiki page, which means open to all, every one could join in. If somebody is interested in a public 
 case, he can feel free to edit the page without asking for an allowance. In the chat portal of this community, one could 
