--- a/docs/Developers Manual/parts/appendix.tex
+++ b/docs/Developers Manual/parts/appendix.tex
@@ -6,7 +6,7 @@ The following tables are showing the protocolls of the held team meetings.
 
 \begin{figure}
   \centering
-    \includegraphics[width=0.97\textwidth]{images/a_meetings/meeting_01a.png}
+    \includegraphics[width=\textwidth]{images/a_meetings/meeting_01a.png}
   \caption{Meeting protocol no. 1 part 1}
   \label{fig:meeting protocol no. 1 part 1}
 \end{figure}
