Some preparations for different file areas

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -44,3 +44,4 @@ You were logged off successfully.;Sie wurden erfolgreich ausgeloggt.
 You were logged in successfully.;Sie wurden erfolgreich eingeloggt.
 Register;Registrieren
 Imprint;Impressum
+Select a Case;Fall auswählen
