--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -36,7 +36,7 @@ Case Information;Fall Informationen
 Documents;Dokumente
 List of documents;Liste von Dokumenten
 Uploaded;Hochgeladen
-Edit Cases;Fälle bearbeiten
+Edit Case;Fall bearbeiten
 Case you're working on;Ihr aktueller Fall
 Logout;Ausloggen
 of;von
