Update from newer version of html5 bp

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -45,3 +45,9 @@ You were logged in successfully.;Sie wurden erfolgreich eingeloggt.
 Register;Registrieren
 Imprint;Impressum
 Select a Case;Fall auswählen
+
+Your browser is;Ihr Browser ist
+ancient!;veraltet!
+Upgrade to a different browser;Bitte updaten Sie auf einen neueren Browser
+install Google Chrome Frame;installieren Sie Google Chrome Frame
+to experience this site.;um diese Seite in vollständiger Qualität zu sehen.
