--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -51,3 +51,5 @@ ancient!;veraltet!
 Upgrade to a different browser;Bitte updaten Sie auf einen neueren Browser
 install Google Chrome Frame;installieren Sie Google Chrome Frame
 to experience this site.;um diese Seite in vollständiger Qualität zu sehen.
+
+Unfortunately JavaScript is currently not supported or is disabled in your browser. Please enable JavaScript for full functionality.;Leider wird JavaScript in Ihrem Browser nicht unterstützt oder ist deaktiviert. Bitte aktivieren Sie JavaScript für die vollständige Funktionalität.
