Changed contextmenu to be only displayed in appropriate area

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -54,3 +54,5 @@ to experience this site.;um diese Seite in vollständiger Qualität zu sehen.
 
 Unfortunately JavaScript is currently not supported or is disabled in your browser. Please enable JavaScript for full functionality.;Leider wird JavaScript in Ihrem Browser nicht unterstützt oder ist deaktiviert. Bitte aktivieren Sie JavaScript für die vollständige Funktionalität.
 Attention!;Achtung!
+
+Page;Seite
