Fixed some bugs with the modal dialog and change ui a bit

--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -56,3 +56,7 @@ Unfortunately JavaScript is currently not supported or is disabled in your brows
 Attention!;Achtung!
 
 Page;Seite
+
+Upload files;Dateien hochladen
+File information;Dateiinformationen
+Description;Beschreibung
