--- a/data/languages/de.csv
+++ b/data/languages/de.csv
@@ -92,3 +92,5 @@ The character recognition of big files can take very long, you will be notified 
 The report generation for "%s" has been started.;Die Berichterstellung für "%s" wurde gestartet.
 Show comments;Kommentare anzeigen
 Write comment;Kommentar schreiben
+<p>This is the place for a critical examination of scientific papers. The page offers you tools to collaboratively discover, collect and document plagiarism.</p><p>If you would like to participate feel free to <a href="/user/register">register</a> or use our public areas.</p>;<p>Wir setzen uns kritisch mit Hochschulschriften auf Basis belastbarer Plagiatsfundstellen auseinander. Dises Seite bietet Möglichkeiten um gemeinschaftlich Plagiate zu suchen, zu sammeln und zu dokumentieren.</p><p>Wenn Du dich gerne beteiligen möchtests, dann <a href="/user/register">registriere</a> dich einfach oder erkunde unsere öffentlichen Bereiche.</p>
+Welcome to %s;Willkommen bei %s
